--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2680,107 +2680,107 @@ stories:
   domain: http://www.cuerorecord.com/
   link: https://www.cuerorecord.com/news/christian-concert-planned-stevenson-unit-chapel-fundraiser
 images:
-- name: crow-crow-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-kand-two.jpg
-- name: old-school-house-old-schoolhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
-- name: ellis-island-ellisisland-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-rainbow-festival.jpg
-- name: trucksilo-trucksilo-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
-- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-- name: copper-circuit-DSC_0047.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0047.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-- name: white-house-whitehouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
-- name: blossombar-blossombar-still-2560.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still-2560.jpg
-- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-- name: castle-wall-DSC-0067-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-5.JPG
-- name: old-gas-pumps-oldgaspumps-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-bright-sand.jpg
-- name: curtain-curtain-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
-- name: old-barn-old-barn-1500-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gan-vogh.jpg
-- name: locked-up-steam-lock-up-steam-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-copper-circuit-2.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-- name: razorcliff-razorcliff-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crunch-paper.jpg
-- name: hollywood-building-hollywood-building-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-electricity.jpg
-- name: server-cloud-server-racks-door-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
-- name: amusement-park-amusement-park-2-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-bright-sand.jpg
-- name: legal-statue-legalstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-graham-sutherland.jpg
-- name: trucksilo-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
-- name: aws-s3-desertrun-desertrun-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still.jpg
-- name: lincoln-memorial-lincolnmemorial.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial.jpg
-- name: gypsy-wagon-gypsywagon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-internet-numbers.jpg
-- name: birdhouse-birdhouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-marcel-duchamp.jpg
-- name: status-berlin-status-berlin-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-three.jpg
-- name: power-lines-power-lines-empty-space-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
-- name: trucksilo-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
-- name: bordercrossing-bordercrossing-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-two.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-- name: abandonedbuildings_far_away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
-- name: birdhouse-birdhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
-- name: bluelake-far-away-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-01-17-38.jpg
-- name: birdhouse-birdhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-monet-one.jpg
-- name: server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
-- name: powerlines-power-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-umberto-bocc.jpg
-- name: server-cloud-server-racks-clouds-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-free-woman.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: mediterranean-mediterranean-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-ww2-dresden.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
-- name: beach-rocks-beach-rocks-currents-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-post-modern.jpg
-- name: castle-wall-DSC-0067-dali-three.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-three.JPG
-- name: gypsymosaic-gypsy-eyes-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
-- name: windowmountain-window-mountain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-creativity.jpg
-- name: fence-fence-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-deep-connections.jpg
-- name: docks-docks-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+- name: aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: dragon-desert-desert-dragon-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-really-hot.jpg
+- name: art-museum-art-museum-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
+- name: rain-princess-IMG_8302.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8302.jpg
+- name: oldhotel-oldhotel-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-missle.jpg
+- name: old-cabin-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-diego-rivera1.jpg
+- name: treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still-1200.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
+- name: razorcliff-razorcliff-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-space-pizza.jpg
+- name: oldhotel-oldhotel-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alien-goggles.jpg
+- name: cargo-ship-cargo-ship-on-sea-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-wols.jpg
+- name: white-house-lawn-white-house-lawn-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-diego-rivera1.jpg
+- name: crow_satan_red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_satan_red.jpg
+- name: oldhouse-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-umberto-bocc.jpg
+- name: oldroad-old-road-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-emily-carr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
+- name: aws-s3-stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gears-smoking-cigarette.jpg
+- name: oldhousecars-house-old-cars-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-oily-mcoilface.jpg
+- name: fence-mexico-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-graham-sutherland.jpg
+- name: berlinwall-DSC-0084-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colored-circuits.jpg
+- name: miamibeach-miamibeach-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-spagetti-accident.jpg
+- name: beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
+- name: hollywood-building-hollywood-building-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
+- name: locked-up-steam-lock-up-steam-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
+- name: border-crossing-bordercrossing-sand-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-sand-paper.png
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: power-lines-power-lines-empty-space-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-gan-vogh.jpg
+- name: mosaic-face-mosaic-face-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-jap-dys-1.jpg
+- name: school-clouds-church-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crafty-painting.jpg
+- name: oldsmallboat-oldsmallboat-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
+- name: sand-hand-sand-hand-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crabapple.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
+- name: store-on-corner-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
+- name: crow_dark_rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_rain.jpg
+- name: rain-princess-P6210065.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P6210065.jpg
+- name: downtown-trucksilo-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
+- name: amusement-park-amusement-park-2-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-aqua.jpg
+- name: fence-bw-fist-dark-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-dark-dali.png
+- name: powerlines-power-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-soul.jpg
+- name: walled-garden-walled-garden-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
+- name: oldtrain-oldtrain-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purple-pond.jpg
+- name: paris-paris-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-light-dali.jpg
+- name: wind-mills-windmills-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
+- name: aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+- name: trucksilo-trucksilo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
+- name: statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+- name: subway-subway-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-sand-paper.jpg
+- name: white-house-lawn-white-house-lawn-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-mucha-mult.jpg
 ---
 Man Charged In York County Stabbing Death Of His Older Brother.&nbsp;Movie In The Park Soda Springs On July 15th.&nbsp;Monday And Tuesday's La Porte County Fair Schedule.&nbsp;How Denver Became One Of America's Most Walkable Cities.&nbsp;Kentucky Real Estate Market Continues Recovery.&nbsp;Richard Dick Olson, 80, Of Colfax.&nbsp;Heidi Montag Learns From Past Mistakes.&nbsp;Villager Decorates Neighbors Yards On Birthdays.&nbsp;
